# shelljava

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mordred/mylibrary/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/mordred/mylibrary/: ExampleResultAIDL.aidl
app/src/main/java/com/mordred/mylibrary/: ExampleService.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mordred/mylibrary/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
shelljava/: build.gradle
shelljava/src/androidTest/java/com/mordred/shelljava/: ExampleInstrumentedTest.java
shelljava/src/main/: AndroidManifest.xml
shelljava/src/main/aidl/com/mordred/shelljava/: IShellIPC.aidl
shelljava/src/main/cpp/: CMakeLists.txt  shelljava.cpp
shelljava/src/main/java/com/mordred/shelljava/: Client.java  Constants.java  Server.java  ServerConnectionListener.java  ShellJava.java  ShellService.java  Utils.java
shelljava/src/main/res/raw/: libshelljava_arm  libshelljava_arm64  libshelljava_x86  libshelljava_x86_64
shelljava/src/test/java/com/mordred/shelljava/: ExampleUnitTest.java
